--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "humble",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Development Environment for Humble",
   "main": "index.js",
   "scripts": {
@@ -26,10 +26,10 @@
     "html-webpack-plugin": "^4.4.1",
     "imports-loader": "^1.1.0",
     "mini-css-extract-plugin": "^0.11.2",
-    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.0.2",
     "raw-loader": "^4.0.1",
+    "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.2.2",
